[package]
name = "workspace-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
pathdiff = "0.2"
[dev-dependencies]
tempfile = "3.8"

[lib]
name = "workspace_manager"
path = "src/lib.rs"

[[bin]]
name = "workspace-manager"
path = "src/main.rs"